crates/backyard-parser/tests/snapshots/functions__anonymous.snap
---
source: crates/backyard-parser/tests/functions.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator:
      - 61
    right:
      node_type: anonymous_function
      is_ref: true
      parameters:
        - node_type: parameter
          variable_type:
            node_type: type
            is_nullable: false
            name:
              - 105
              - 110
              - 116
            loc:
              start:
                line: 1
                column: 16
                offset: 16
              end:
                line: 1
                column: 19
                offset: 19
            leadings: ~
            trailings: ~
          is_ref: false
          is_ellipsis: false
          name:
            node_type: identifier
            name:
              - 120
            loc:
              start:
                line: 1
                column: 20
                offset: 20
              end:
                line: 1
                column: 21
                offset: 21
            leadings: ~
            trailings: ~
          value: ~
          loc:
            start:
              line: 1
              column: 16
              offset: 16
            end:
              line: 1
              column: 20
              offset: 20
          leadings: ~
          trailings: ~
        - node_type: parameter
          variable_type:
            node_type: type
            is_nullable: true
            name:
              - 105
              - 110
              - 116
            loc:
              start:
                line: 1
                column: 24
                offset: 24
              end:
                line: 1
                column: 28
                offset: 28
            leadings: ~
            trailings: ~
          is_ref: false
          is_ellipsis: false
          name:
            node_type: identifier
            name:
              - 121
            loc:
              start:
                line: 1
                column: 29
                offset: 29
              end:
                line: 1
                column: 30
                offset: 30
            leadings: ~
            trailings: ~
          value: ~
          loc:
            start:
              line: 1
              column: 24
              offset: 24
            end:
              line: 1
              column: 29
              offset: 29
          leadings: ~
          trailings: ~
      uses:
        - node_type: variable
          name:
            node_type: identifier
            name:
              - 97
              - 114
              - 103
              - 50
            loc:
              start:
                line: 1
                column: 38
                offset: 38
              end:
                line: 1
                column: 42
                offset: 42
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 38
              offset: 38
            end:
              line: 1
              column: 42
              offset: 42
          leadings: ~
          trailings: ~
      return_type:
        node_type: type
        is_nullable: false
        name:
          - 115
          - 116
          - 97
          - 116
          - 105
          - 99
        loc:
          start:
            line: 1
            column: 46
            offset: 46
          end:
            line: 1
            column: 52
            offset: 52
        leadings: ~
        trailings: ~
      body:
        node_type: block
        statements: []
        loc:
          start:
            line: 1
            column: 53
            offset: 53
          end:
            line: 2
            column: 0
            offset: 55
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 2
          column: 0
          offset: 55
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 2
        column: 0
        offset: 55
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 1
    offset: 56
leadings: ~
trailings: ~
