crates/backyard-parser/tests/snapshots/functions__arrow.snap
---
source: crates/backyard-parser/tests/functions.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: []
      trailings: []
    operator: "="
    right:
      node_type: arrow_function
      is_ref: true
      parameters:
        - node_type: parameter
          variable_type:
            node_type: type
            is_nullable: false
            name: int
            loc:
              start:
                line: 1
                column: 10
                offset: 10
              end:
                line: 1
                column: 13
                offset: 13
            leadings: []
            trailings: []
          is_ref: false
          is_ellipsis: false
          name:
            node_type: identifier
            name: x
            loc:
              start:
                line: 1
                column: 14
                offset: 14
              end:
                line: 1
                column: 15
                offset: 15
            leadings: []
            trailings: []
          value: ~
          loc:
            start:
              line: 1
              column: 14
              offset: 14
            end:
              line: 1
              column: 14
              offset: 14
          leadings: []
          trailings: []
      return_type:
        node_type: type
        is_nullable: true
        name: int
        loc:
          start:
            line: 1
            column: 19
            offset: 19
          end:
            line: 1
            column: 23
            offset: 23
        leadings: []
        trailings: []
      body:
        node_type: "null"
        loc:
          start:
            line: 1
            column: 27
            offset: 27
          end:
            line: 1
            column: 27
            offset: 27
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 27
          offset: 27
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 27
        offset: 27
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 31
    offset: 31
leadings: []
trailings: []
