crates/backyard-parser/tests/snapshots/functions__basic.snap
---
source: crates/backyard-parser/tests/functions.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: function
    is_ref: true
    name:
      node_type: identifier
      name:
        - 97
      loc:
        start:
          line: 1
          column: 10
          offset: 10
        end:
          line: 1
          column: 11
          offset: 11
      leadings: ~
      trailings: ~
    parameters:
      - node_type: parameter
        variable_type:
          node_type: type
          is_nullable: true
          name:
            - 105
            - 110
            - 116
          loc:
            start:
              line: 1
              column: 12
              offset: 12
            end:
              line: 1
              column: 16
              offset: 16
          leadings: ~
          trailings: ~
        is_ref: false
        is_ellipsis: true
        name:
          node_type: identifier
          name:
            - 98
          loc:
            start:
              line: 1
              column: 20
              offset: 20
            end:
              line: 1
              column: 21
              offset: 21
          leadings: ~
          trailings: ~
        value:
          node_type: number
          value:
            - 48
          loc:
            start:
              line: 1
              column: 25
              offset: 25
            end:
              line: 1
              column: 25
              offset: 25
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 12
            offset: 12
          end:
            line: 1
            column: 25
            offset: 25
        leadings: ~
        trailings: ~
      - node_type: parameter
        variable_type:
          node_type: intersection_type
          types:
            - node_type: type
              is_nullable: false
              name:
                - 83
                - 116
                - 114
                - 105
                - 110
                - 103
              loc:
                start:
                  line: 1
                  column: 28
                  offset: 28
                end:
                  line: 1
                  column: 34
                  offset: 34
              leadings: ~
              trailings: ~
          loc:
            start:
              line: 1
              column: 28
              offset: 28
            end:
              line: 1
              column: 34
              offset: 34
          leadings: ~
          trailings: ~
        is_ref: true
        is_ellipsis: false
        name:
          node_type: identifier
          name:
            - 99
          loc:
            start:
              line: 1
              column: 36
              offset: 36
            end:
              line: 1
              column: 37
              offset: 37
          leadings: ~
          trailings: ~
        value:
          node_type: array
          is_short: true
          items:
            - node_type: array_item
              key: ~
              value:
                node_type: number
                value:
                  - 48
                  - 46
                  - 48
                  - 49
                loc: ~
                leadings: ~
                trailings: ~
              loc:
                start:
                  line: 1
                  column: 42
                  offset: 42
                end:
                  line: 1
                  column: 42
                  offset: 42
              leadings: ~
              trailings: ~
            - node_type: array_item
              key: ~
              value:
                node_type: number
                value:
                  - 48
                  - 120
                  - 49
                  - 50
                loc: ~
                leadings: ~
                trailings: ~
              loc:
                start:
                  line: 1
                  column: 48
                  offset: 48
                end:
                  line: 1
                  column: 48
                  offset: 48
              leadings: ~
              trailings: ~
          loc:
            start:
              line: 1
              column: 41
              offset: 41
            end:
              line: 1
              column: 52
              offset: 52
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 28
            offset: 28
          end:
            line: 1
            column: 52
            offset: 52
        leadings: ~
        trailings: ~
      - node_type: parameter
        variable_type:
          node_type: type
          is_nullable: false
          name:
            - 98
            - 111
            - 111
            - 108
          loc:
            start:
              line: 1
              column: 55
              offset: 55
            end:
              line: 1
              column: 59
              offset: 59
          leadings: ~
          trailings: ~
        is_ref: false
        is_ellipsis: false
        name:
          node_type: identifier
          name:
            - 100
          loc:
            start:
              line: 1
              column: 60
              offset: 60
            end:
              line: 1
              column: 61
              offset: 61
          leadings: ~
          trailings: ~
        value: ~
        loc:
          start:
            line: 1
            column: 55
            offset: 55
          end:
            line: 1
            column: 60
            offset: 60
        leadings: ~
        trailings: ~
    return_type:
      node_type: type
      is_nullable: true
      name:
        - 105
        - 110
        - 116
      loc:
        start:
          line: 1
          column: 65
          offset: 65
        end:
          line: 1
          column: 69
          offset: 69
      leadings: ~
      trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 70
          offset: 70
        end:
          line: 2
          column: 0
          offset: 72
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 0
        offset: 72
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 0
    offset: 72
leadings: ~
trailings: ~
